--- a/src/assets/css/showPic.styl
+++ b/src/assets/css/showPic.styl
@@ -1,9 +1,7 @@
 .pic-box
     position:absolute;
-    top:50%;
     width:100%;
-    height:600px;
-    margin-top:-300px;
+    height:800px;
     background-color:#000;
     overflow:hidden;
     .img-box li
@@ -11,6 +9,7 @@
         width:260px;
         height:320px;
         padding:10px;
+        boxsizing:border-box;
     .img-box img
         height:250px;
         width:100%;
@@ -23,6 +22,10 @@
         left:0;
         top:0;
         padding:20px;
+        p
+            margin-bottom:0;
+            margin-top:10px;
+            font-size:14px;
     .img-item
         perspective:1000px;
     .img-detail
@@ -44,9 +47,10 @@
 
     .back
         transform: rotateY(180deg);
-        background-color:#999;
+        background-color:#dedcd8;
         height:100%;
         width:100%;
+        padding:10px;
 
 *
     transition: top 1s, left 0.5s, transform  0.5s
