--- a/src/assets/css/common.styl
+++ b/src/assets/css/common.styl
@@ -17,3 +17,9 @@ li{
 .fr{
     float:right;
 }
+.clearfix:after
+    content:"";
+    display:block;
+    height:0;
+    clear:both;
+    visibility:hidden;
